[package]
name = "rust_numpy_ext"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.3"
numpy = "0.15"
rand = "0.8.5" # Specific for this example
ordered-float = "2.10.0" # Specific for this example


[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]
